# KMFM

./: .gitignore  ADLF_REPLAY_V4_COLAB.md  BRANCH_COMPLEMENTARITY_AUDIT_COLAB.md  CALIBRATED_V3_COLAB.md  COLAB_SETUP.md  OASD_V6_COLAB.md  PAPER_REBUILD_FROM_RESULTS.md  README.md  SPECTRAL_TEACHER_V7_COLAB.md  SSRC_V5_COLAB.md  VALIDATION_REPORT.md  pyproject.toml  requirements-colab.txt
configs/: pavia_random_pixel_example.json  pavia_spatial_block_example.json
notebooks/: KMFM_LASSF_Colab.ipynb
refine-logs/: FINAL_PROPOSAL.md  MANIFEST.md  PROBLEM_ANCHOR.md  REFINEMENT_REPORT.md  REFINE_STATE.json  REVIEW_SUMMARY.md  round-0-initial-proposal.md  round-1-refinement.md  round-1-review.md  score-history.md
refine-logs/ssrc-v5/: 20260723T212020+0800-round-0-initial-proposal.md  FINAL_PROPOSAL.md  MANIFEST.md  REFINEMENT_REPORT.md  REFINE_STATE.json  REVIEW_SUMMARY.md  round-1-refinement.md  round-1-review.md  score-history.md
scripts/: aggregate.py  audit_branch_complementarity.py  audit_spectral_teacher_v7.py  colab_git.py  colab_install.sh  colab_update.sh  evaluate_adlf_replay.py  evaluate_mechanism.py  evaluate_oasd.py  evaluate_ssrc_replay.py  export_table.py  make_split.py  replay_logit_fusion.py  replay_selective_correction.py  run_colab_experiment.py  smoke_test.py  train.py  verify_run.py
src/kmfm/: __init__.py  artifacts.py  complementarity.py  data.py  (+8 more)
tests/: test_colab_runner.py  test_complementarity_audit.py  test_core.py  test_distillation.py  test_logit_fusion.py  test_oasd_evaluation.py  test_selective_correction.py  test_spectral_audit.py
