[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kmfm-rebuild"
version = "0.1.0"
description = "Leakage-aware spectral-spatial fusion for reproducible HSI classification"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24,<3",
  "scipy>=1.10",
  "torch>=2.2",
  "scikit-learn>=1.3",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "tabulate>=0.9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
